distortion bug solved

--- a/styles/event_responsive.css
+++ b/styles/event_responsive.css
@@ -96,6 +96,10 @@
   #slider {
     height: 35vh !important;
   }
+  #slider label{
+    width: 80%;
+    height: auto;
+  }
 }
 @media only screen and (max-width: 475px) {
   .slide {
